# document_recognition_presentation

./: .gitignore  README.md  app.py  pyproject.toml
docker/: Dockerfile-cu124
