[tool.poetry]
name = "document-recognition-presentation"
version = "0.1.0"
description = ""
authors = ["Anton Shiryaev <med.phisiker@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
model-qwen2-5-vl = {git = "https://github.com/VLMHyperBenchTeam/model_qwen2.5-vl.git", rev = "0.1.0"}
streamlit = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
